tests/invalid/dict_fromkeys_wrong_key_list_type/main.py
def run_case() -> None:
    d: dict[int, int] = {1: 10}
    x: dict[int, int] = d.fromkeys(["a", "b"], 1)

if __name__ == "__main__":
    run_case()
